--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "eject": "expo eject"
+    "eject": "expo eject",
+    "lint": "eslint . --ext .js"
   },
   "dependencies": {
     "expo": "~44.0.0",
@@ -18,7 +19,12 @@
     "react-native-web": "0.17.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.17.2",
+    "@babel/eslint-parser": "^7.17.0",
+    "@react-native-community/eslint-config": "^3.0.1",
+    "eslint": "^8.9.0",
+    "eslint-plugin-flowtype": "8.0.3",
+    "prettier": "^2.5.1"
   },
   "private": true
 }
